[tool.poetry]
name = "data-structures-and-algorithms-401"
version = "0.1.0"
description = ""
authors = ["layanabushaweesh <layanabushaweesh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typeshed-client = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
